# game

./: README.md  app.nix  flake.nix  makefile  meson.build
desktopAssets/: pink-pong.desktop
src/: Game.cpp  Game.h  Paddle.cpp  Paddle.h  Paddle.hpp  Splash.cpp  Splash.h  Square.cpp  Square.h  Square.hpp  main.cpp
